Squashed merge of the following (up to 5fbd2):
    Express BitRepresentation constants A, C, T, G as final val, allowing them to become compile-time constants instead of virtual methods
    Style cleanups.  Complete unfinished refactoring (removing implicit spark: SparkSession) from many methods in SparkConfiguration subclasses
    Don't compile for JDK 8 compatibility by default (scalac and javac flags)
    Simplify RunCmd to not take an implicit spark session as an argument of run(). Instead provide the spark session in each tool's configuration.
    Introduce SparkConfiguration as a Configuration of tools that need to use a SparkSession.  General commands cleanup.
    Style cleanups
    For some tests that take DNA strings, test both lower and upper case characters
    Simplified algorithm for Supermers.splitByAmbiguity, based on a regex split.  Property tests for this.
    Upgraded Spark Version to 3.5.0
    Added a .gitignore file
    Delete ShiftScannerTest, and make ShiftScannerProps perform the same checking instead
    Bugfix for shrinkNTSeq: had an infinite loop on empty string, and inefficient performance